@@ -439,7 +439,10 @@ class DB {
 				if (!isset($tableSchema['fields'][$field]) || is_null($values)) {
 					self::exception(self::DBEXECUTE_ERROR, _s('Incorrect field "%1$s" name or value in where statement for table "%2$s".', $field, $table));
 				}
-				$sqlWhere[] = DBcondition($field, zbx_toArray($values));
+				$values = zbx_toArray($values);
+				sort($values); // sorting ids to prevent deadlocks when two transactions depends from each other
+
+				$sqlWhere[] = DBcondition($field, $values);
 			}
 
 			// sql execution
@@ -517,7 +520,10 @@ class DB {
 			if (!isset($table_schema['fields'][$field]) || is_null($values)) {
 				self::exception(self::DBEXECUTE_ERROR, _s('Incorrect field "%1$s" name or value in where statement for table "%2$s".', $field, $table));
 			}
-			$sqlWhere[] = DBcondition($field, zbx_toArray($values));
+			$values = zbx_toArray($values);
+			sort($values); // sorting ids to prevent deadlocks when two transactions depends from each other
+
+			$sqlWhere[] = DBcondition($field, $values);
 		}
 
 		$sql = 'DELETE FROM '.$table.' WHERE '.implode(($use_or ? ' OR ' : ' AND '), $sqlWhere);
